sfSandBoxCode/force-app/main/default/objects/Sales_Order_PO_Item__c/Sales_Order_PO_Item__c.object-meta.xml
<CustomObject>
    <description>Sales Order items sold by Sanergy Ltd</description>
    <label>Sales Order PO Item</label>
    <nameField>
        <displayFormat>SOITM-{00000000}</displayFormat>
        <label>Sales Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order PO Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>