sfSandBoxCode/force-app/main/default/objects/Sales_Order_PO_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order Item</label>
    <referenceTo>rstk__poitem__c</referenceTo>
    <relationshipLabel>Sales Order PO Items</relationshipLabel>
    <relationshipName>Sales_Order_PO_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>