sfSandBoxCode/force-app/main/default/objects/Sales_Order_PO_Item__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Sales Order PO Items</relationshipLabel>
    <relationshipName>Sales_Order_PO_Items</relationshipName>
    <type>Lookup</type>
</CustomField>