sfSandBoxCode/force-app/main/default/objects/Sales_Order_PO_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rootstock Product</label>
    <referenceTo>rstk__soprod__c</referenceTo>
    <relationshipLabel>Sales Order PO Items</relationshipLabel>
    <relationshipName>SO_Sanergy_Components</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>