sfSandBoxCode/force-app/main/default/objects/Sales_Order_PO_Item__c/fields/Salesforce_Product__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Order PO Items</relationshipLabel>
    <relationshipName>Sales_Order_PO_Items</relationshipName>
    <type>Lookup</type>
</CustomField>