sfSandBoxCode/force-app/main/default/objects/Sales_Order_PO_Item__c/fields/uom__c.field-meta.xml
<CustomField>
    <fullName>uom__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit Of Measure</label>
    <referenceTo>rstk__syuom__c</referenceTo>
    <relationshipLabel>Sales Order PO Items</relationshipLabel>
    <relationshipName>Sales_Order_PO_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>