sfSandBoxCode/force-app/main/default/objects/Sales_Order_PO_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Item__c</columns>
    <columns>Product__c</columns>
    <columns>Salesforce_Product__c</columns>
    <columns>Price_Book__c</columns>
    <columns>uom__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>